# RK3588_PROJECT

./: .gitattributes  .gitignore  README.md  cvgDrv.ko  deploy_to_rk3588.ps1  rk3588.ini  rk3588.ini.example
RK3588API/: glkconfig.h  platform.h
RK3588API/Base/: BaseDevOper.h  CapabilityDef.h  DevOper.h  DevRegisterDef.h  DevResourceGet.h  DownDmaRegister.h  DriverInterface.h  SysDifferent.h
RK3588API/include/: ApiBase.h  ApiExt.h  BaseDef.h  errcode.h  fc_macro_def.h  glkasm.h  glkfc1553.h  glkglink.h  glkimg.h  schetb.h  softfc.h
WinSim/: CMakeLists.txt  aarch64-linux-gnu.cmake  toolchain-arm64.cmake
WinSim/ConsoleApplication1/: ConsoleApplication1.cpp  getopt.c  getopt.h  parse1553.c  parse1553.h  parseasm.c  parseasm.h  shellcmd.c  shellcmd.h
WinSim/ConsoleApplication1/shell/: shell.c  shell.h  shell_cfg.h  shell_cmd_list.c  shell_ext.h  shellin.c  shellin.h
WinSim/encoder/: encoder_pipeline.cpp  encoder_pipeline.h  encoder_types.h  frame_assembler.cpp  frame_assembler.h  osd_overlay.cpp  osd_overlay.h  raw16_preprocess.cpp  raw16_preprocess.h  rk_mpp_encoder.cpp  rk_mpp_encoder.h
WinSim/tools/: frame_assembler_smoke_test.cpp  offline_encode_test.cpp
docs/: DEVELOPMENT_GUIDE.md  FPGA_RK3588_BOARD_BRINGUP.md  MOBAXTERM_RK3588_GUIDE.md  PSEUDO_VIDEO_BRINGUP.md  RK3588_DEBUG_GUIDE.md  V7_LIVE_CAMERA_RUNBOOK.md
tools/: convert_png_to_gray10le16.ps1
